Safari fix for stretching tiles & further imgix optimisation

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,7 +90,7 @@ input[type=file] {
 }
 
 #gallery li {
-    height: 35vw;
+    height: 30vw;
     flex-grow: 1;
 }
 
@@ -99,7 +99,8 @@ input[type=file] {
 }
 
 #gallery img {
-    width: 100%;
+    width: auto;
+    min-width: 100%;
     height: 100%;
     max-height: 100%;
     object-fit: cover;
